--- a/gridop/gridop1/makefile
+++ b/gridop/gridop1/makefile
@@ -3,7 +3,7 @@ TARGET = gridop1
 CC = g++
 RM = rm -rf 
 
-OPTS = -std=c++14 -I ~/.local/include
+OPTS = -std=c++14 -I ../..
 
 SRC = $(TARGET).cpp
 
