Corrected error in gridop2_vtk

--- a/gridop/gridop2_vtk/CMakeLists.txt
+++ b/gridop/gridop2_vtk/CMakeLists.txt
@@ -17,8 +17,8 @@ MESSAGE("COMPILER VERSION ${CMAKE_CXX_COMPILER_VERSION}")
 SET(SRC_LIST gridop2.cpp)
 
 include_directories(${BOOST_ROOT})
-include_directories("../../../include")
-include_directories("../../gridop2_src")
+include_directories("../..")
+include_directories("../gridop2_src")
 include_directories("/usr/include/vtk-7.1")
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 target_link_libraries(${PROJECT_NAME} ${VTK_LIBRARIES}) 
